--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
 #FIXME: incorrect after git project creation
        - ./httpd.conf:/usr/local/apache2/conf/httpd.conf:ro
-       - ./my-cgi.sh:/usr/local/apache2/cgi-bin/my-cgi.cgi:ro
+       - ./cgi-bin/:/usr/local/apache2/cgi-bin/:ro
     ports:
        - "9999:80"
     environment:
