pass needed env vars to cgi

--- a/local-conf.d/vindecoder-cgi-server.conf
+++ b/local-conf.d/vindecoder-cgi-server.conf
@@ -3,6 +3,8 @@ LoadModule cgi_module modules/mod_cgi.so
 
 LogLevel debug
 
+PassEnv VINDECODER_EU_CREDENTIAL_FILE VINDECODER_EU_CLIENT
+
 <Directory "/usr/local/apache2/vindecoder-cgi-bin">
     AllowOverride None
     Options +ExecCGI
