--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,11 @@ services:
        - ./local-conf.d/:/usr/local/apache2/conf/local-conf.d/:ro
        - ./vindecoder-cgi-bin/:/usr/local/apache2/vindecoder-cgi-bin/:ro
        - ./vindecoder.eu-client/:/usr/local/vindecoder.eu-client/:ro
+       - ./_cache_for_vindecoder.eu_/:/var/vindecoder.eu/cache/
     ports:
        - "9999:80"
     environment:
-       - VINDECODER_EU_CLIENT=${VINDECODER_EU_CLIENT:-/usr/local/vindecoder.eu-client/bin/vindecoder_client.sh}
-       - VINDECODER_EU_CREDENTIAL_FILE=${VINDECODER_EU_CREDENTIAL_FILE:-/usr/local/vindecoder.eu-client/etc/vindecoder.eu.credential.txt}
-       - TOTO=${TOTO:-titi2}
+       - VINDECODER_EU_CLIENT=/usr/local/vindecoder.eu-client/bin/vindecoder_client.sh
+       - VINDECODER_EU_CREDENTIAL_FILE=/usr/local/vindecoder.eu-client/etc/vindecoder.eu.credential.txt
+       - VINDECODER_EU_CACHE_DIR=/var/vindecoder.eu/cache
 
