add var export for CACHE

--- a/local-conf.d/vindecoder-cgi-server.conf
+++ b/local-conf.d/vindecoder-cgi-server.conf
@@ -3,7 +3,7 @@ LoadModule cgi_module modules/mod_cgi.so
 
 LogLevel debug
 
-PassEnv VINDECODER_EU_CREDENTIAL_FILE VINDECODER_EU_CLIENT
+PassEnv VINDECODER_EU_CREDENTIAL_FILE VINDECODER_EU_CLIENT VINDECODER_EU_CACHE_DIR
 
 <Directory "/usr/local/apache2/vindecoder-cgi-bin">
     AllowOverride None
