--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,12 @@ services:
        - VINDECODER_EU_CREDENTIAL_FILE=/usr/local/vindecoder.eu-client/etc/vindecoder.eu.credential.txt
        - VINDECODER_EU_CACHE_DIR=/var/vindecoder.eu/cache
 
+  setup-vindecoder-server:
+    image: alpine
+    restart: unless-stopped
+    volumes:
+       - ./_cache_for_vindecoder.eu_/:/var/vindecoder.eu/cache/
+    command:
+       - /bin/sh
+       - -c
+       - 'set -x; chmod 777 /var/vindecoder.eu/cache/'
