--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ services:
 
   vindecoder-server:
     build: .
-#!!    restart: unless-stopped
+    restart: unless-stopped
     volumes:
        - ./local-conf.d/:/usr/local/apache2/conf/local-conf.d/:ro
        - ./vindecoder-cgi-bin/:/usr/local/apache2/vindecoder-cgi-bin/:ro
        - ./vindecoder.eu-client/:/usr/local/vindecoder.eu-client/:ro
        - ./_cache_for_vindecoder.eu_/:/var/vindecoder.eu/cache/
+    expose:
+       - 80
     ports:
        - "9999:80"
     environment:
