--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
          - /bin/sh
          - -c
          - 'set -x; chmod 777 /var/vindecoder.eu/cache/'
+      network_mode: "none"
 
 networks:
 
