--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3'
 
 services:
 
-   vindecoder-server:
+   simple-vindecoder-server:
       build: .
       restart: unless-stopped
       volumes:
